# bda-project

./: .gitignore  README.md  hierarchical_nb_model.md  model_comparison.md  mvp_drone_detection_model.md  nb_model.md  pyproject.toml
models/: hierarchical_nb  hierarchical_nb.stan  nb  nb.stan
scripts/: compare_iou.py  compare_models.py  fit_hier_nb_stan.py  fit_hierarchical.py  fit_mvp.py  fit_nb.py  fit_nb_stan.py  fred_labels.py  loo_compare.py  main.py  run_ppc_hier_nb.py  run_ppc_nb.py  visualize_hierarchical.py  visualize_nb.py
src/bda/: counts.py  neg_binomial.py  rendering.py  utils.py
