[project]
name = "bda-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmdstanpy>=1.3.0",
    "evio",
    "fastparquet>=2024.11.0",
    "pymc>=5.25.1",
]

[tool.uv.sources]
evio = { git = "https://github.com/ahtihelminen/evio.git" }
